--- a/index.html
+++ b/index.html
@@ -190,4 +190,5 @@ $('.save').click(function(){
 $('#json-src').keyup();
 </script>
 </body>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1543329708735580" crossorigin="anonymous"></script>
 </html>
