--- a/code.html
+++ b/code.html
@@ -172,4 +172,5 @@ print data
     <br style="clear:both;" />
 </main>
 </body>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1543329708735580" crossorigin="anonymous"></script>
 </html>
