--- a/component.html
+++ b/component.html
@@ -162,4 +162,5 @@
 </main>
 
 </body>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1543329708735580" crossorigin="anonymous"></script>
 </html>
